# aula10/routes/router_produtos.js
@@ -2,7 +2,6 @@ const express = require("express");
 
 const controllerProdutos = require("../controllers/controller_produtos");
 
-const verificarToken = require('../middlewares/auth');
 const validarToken = require("../middlewares/auth");
 
 const router = express.Router();
