# aula10/swagger.yaml
@@ -34,6 +34,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ArrayOfProdutos'
+      security: 
+      - JWTAuth: []
   /produtos/{id}:
     get:
       tags:
@@ -112,6 +114,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Mensagem'
 components:
+  securitySchemes:
+    JWTAuth:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     ArrayOfProdutos:
       type: array
